Knife project does not work when the "Clipping Border" cuts out a portion of the mesh that would other wise obscure the surface to be cut. #40646

Closed
opened 2014-06-16 01:34:45 +02:00 by andreas · 8 comments

System Information
Ubuntu 12.04, Nvidia GTX 440m (driver version: 310.14)

Blender Version
Broken: 2.70 fc1c763

Short description of error
If a mesh has a section overhanging another portion of the mesh, and you hide the first portion of the mesh using the "clipping border" feature (alt + b) in order to knife project onto the second portion of the mesh, the knife project will not work (nothing happens). If the "cut through" option is selected, then the knife project will work as expected (knife project produces cuts through all layers NOT hidden by the clipping boarder)

Exact steps for others to reproduce the error
If one opens the attached .blend file, you can see the bug by hitting the "knife project" button in the left-hand column, and noting that nothing happens. Also note that a potion of the mesh is being hidden by the clipping boarder (hit alt + b to turn it off).

**System Information** Ubuntu 12.04, Nvidia GTX 440m (driver version: 310.14) **Blender Version** Broken: 2.70 fc1c763 **Short description of error** If a mesh has a section overhanging another portion of the mesh, and you hide the first portion of the mesh using the "clipping border" feature (alt + b) in order to knife project onto the second portion of the mesh, the knife project will not work (nothing happens). If the "cut through" option is selected, then the knife project will work as expected (knife project produces cuts through all layers NOT hidden by the clipping boarder) **Exact steps for others to reproduce the error** If one opens the attached .blend file, you can see the bug by hitting the "knife project" button in the left-hand column, and noting that nothing happens. Also note that a potion of the mesh is being hidden by the clipping boarder (hit alt + b to turn it off).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AndreasP

Added subscriber: @AndreasP

Added subscriber: @ideasman42

Added subscriber: @ideasman42

No blend provided.

No blend provided.
Author

Odd. Let me try again.
knife_project_bug.blend

Odd. Let me try again. [knife_project_bug.blend](https://archive.blender.org/developer/F94429/knife_project_bug.blend)

This issue was referenced by f9b7617104

This issue was referenced by f9b7617104a74d9b1a267a775627cdad60e0e333

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f9b7617104.

Closed by commit f9b7617104.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40646
No description provided.