Fix T40646: Knife project fails with clipping